FIx padding/spacing issue

--- a/Picobytes/frontend/src/pages/leaderboard/leaderboard.css
+++ b/Picobytes/frontend/src/pages/leaderboard/leaderboard.css
@@ -44,6 +44,7 @@
     border: 1px solid var(--border-color);
     background-color: var(--card-color);
     border-radius: 16px;
+    margin-left: 30px;
 }
 
 #ld-all-title {
